--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 .resizeMe{
     height: 100%;
 }
+
+#mainTitle{
+    font-size: 3rem;
+}
+
+#mainPageBG{
+   /* background-image: url("images/mainBG.jpeg");
+    background-size: cover; */
+}
